force-app/main/default/objects/Name__c/Name__c.object-meta.xml
<CustomObject>
    <description>It&apos;s just a name.</description>
    <label>Name</label>
    <nameField>
        <label>Fullname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>