force-app/main/default/objects/Name__c/fields/Number2__c.field-meta.xml
<CustomField>
    <fullName>Number2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>