force-app/main/default/objects/Name__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Output</label>
    <length>100</length>
    <type>Text</type>
</CustomField>